--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "12.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-vertical-timeline-component": "^3.5.2",
     "sass": "^1.53.0"
   },
   "devDependencies": {
